--- a/templates/result.html
+++ b/templates/result.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %} {% block content %}
 
 <h3>類似度</h3>
-{{ predict_Confidence }} {% endblock %}
+{{ predictConfidence }} {% endblock %}
