--- a/templates/flask-api-index.html
+++ b/templates/flask-api-index.html
@@ -4,8 +4,36 @@
 <p>長⚪︎ねると自分がどれくらい似ているのか，機械が判定してくれます．</p>
 <p>「ファイルを選択」を押して写真を選んで，「結果を見る」を押してね!</p>
 <form action="/result" method="post" enctype="multipart/form-data">
-  <input type="file" name="image" accept="image/png, image/jpeg, image/jpg" />
+  <input
+    type="file"
+    name="image"
+    accept="image/png, image/jpeg, image/jpg"
+    id="imageInput"
+  />
   <button type="submit">結果を見る</button>
 </form>
+
+</br>
+
+<img
+  id="preview"
+  src=""
+  alt="Image preview will appear here after choosing files"
+/>
+
+<script>
+  document
+    .getElementById("imageInput")
+    .addEventListener("change", function (event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          document.getElementById("preview").src = e.target.result;
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+</script>
 
 {% endblock %}
