--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>長⚪︎ねる類似度メーカー</title>
+    <style>
+      img {
+        max-width: 100%;
+        max-height: auto;
+      }
+      #preview {
+        max-width: 300px;
+        max-height: 300px;
+      }
+    </style>
   </head>
   <body>
     {% block content %}{% endblock %}
